# cob-eda

./: README.md  pyproject.toml
notebook/: built in function.ipynb  count_all_test.ipynb  first.ipynb  test.ipynb
src/cob_eda/: cli.py
tests/: sec_test.py
