[project]
name = "cob-eda"
version = "0.5.1"
description = "COB-EDA is a Python package designed to simplify exploratory data analysis with intuitive tools for statistics, visualizations, and insights discovery.."
authors = [
    {name = "jacob-53", email = "jacob8753@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "president-speech>=0.9.1", "typer>=0.15.1", "tqdm>=4.67.1", "tabulate>=0.9.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
test = [
    "pytest>=8.3.4",
]


[project.scripts]
cob-eda = "cob_eda.cli:entry_point"
cob-eda-akc = "cob_eda.cli:entry_point_akc"
